fixed title width on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -195,10 +195,10 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 440px) {
+@media only screen and (min-width: 1080px) {
     .particles-small {
         .particles-js-canvas-el {
-            height: 160px !important;
+            height: 117px !important;
         }
     }
 }
